[package]
name = "eytzinger"
description = 'This crate implements the "eytzinger" (aka BFS) array layout.'
license = "MIT"
documentation = "https://docs.rs/eytzinger"
repository = "https://github.com/main--/rust-eytzinger"
version = "1.0.1"
authors = ["main() <main@ehvag.de>"]

[profile.release]
debug = true

[dev-dependencies]
quickcheck = "0.4"

[features]
branchless = []
