[package]
name = "eytzinger"
description = 'This crate implements the "eytzinger" (aka BFS) array layout.'
license = "MIT"
documentation = "https://docs.rs/eytzinger"
repository = "https://github.com/main--/rust-eytzinger"
version = "1.0.1"
authors = ["main() <main@ehvag.de>"]

[profile.release]
debug = true

[dependencies.nonmax]
version = "0.5.0"
optional = true
[dependencies.nohash-hasher]
version = "0.2.0"
optional = true

[dev-dependencies]
quickcheck = "0.4"

[features]
default = ["heap-permutator", "heap-permutator-sparse"]
heap-permutator = ["nonmax"]
heap-permutator-sparse = ["nohash-hasher"]
branchless = []

